<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
           http://maven.apache.org/POM/4.0.0
           https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ees</groupId>
    <artifactId>ees-framework</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>cluster</module>
        <module>metadata-store</module>
        <module>messaging</module>
        <module>source</module>
        <module>handlers</module>
        <module>pipeline</module>
        <module>sink</module>
        <module>workflow</module>
        <module>ai-core</module>
        <module>spring-boot-starter</module>
        <module>example</module>
        <module>application</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring.boot.version>3.4.7</spring.boot.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <spring.ai.version>1.1.1</spring.ai.version>
    </properties>

        <dependencyManagement>
            <dependencies>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-dependencies</artifactId>
                    <version>${spring.boot.version}</version>
                    <type>pom</type>
                    <scope>import</scope>
                </dependency>
                <!-- https://mvnrepository.com/artifact/org.springframework.ai/spring-ai-bom -->
                <dependency>
                    <groupId>org.springframework.ai</groupId>
                    <artifactId>spring-ai-bom</artifactId>
                    <version>${spring.ai.version}</version>
                    <scope>import</scope>
                    <type>pom</type>
                </dependency>
                <!-- Internal module versions -->
                <dependency>
                    <groupId>com.ees</groupId>
                    <artifactId>ees-core</artifactId>
                    <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-cluster</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-metadata-store</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-source</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-handlers</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-pipeline</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-sink</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-workflow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-ai-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-spring-boot-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ees</groupId>
                <artifactId>ees-example</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.32</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.12</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.12.1</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </pluginManagement>
    </build>
</project>
